fix broken styles for login

--- a/src/components/login/login.css
+++ b/src/components/login/login.css
@@ -5,33 +5,28 @@
 
 }
 
-.login-input {
-    max-width: 400px;
-}
-
-
 form, label {
     display:flex;
     flex-direction:column;
 }
 
-button {
+.button {
     padding: 5px 10px;
     margin-top: 10px;
     width: fit-content;
     margin-bottom: 10px;
 }
 
-h1 {
+.welcome-header {
     margin-bottom: 10px;
 }
 
-h2 {
+.login-header {
     margin-bottom: 5px;
     margin-top: 5px;
 }
 
-input {
+.input {
     width: 80%; 
     padding: 5px; 
     box-sizing: border-box;
